fix: bug where saving or deleting in modal grid closes modal; modal now stays open until explicitly closed

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -132,7 +132,20 @@
           "dayOfMonth": 0
         }
       ],
-      "amountChange": [],
+      "amountChange": [
+        {
+          "id": 0,
+          "active": false,
+          "version": 1,
+          "tags": [],
+          "changeType": "percentage",
+          "changeValue": 0,
+          "changeFrequency": "Yearly",
+          "startDate": null,
+          "endDate": null,
+          "notes": null
+        }
+      ],
       "tags": [
         "tag",
         "tag2",
