Basic budget definitions display and saving

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -243,7 +243,6 @@
     }
   ],
   "forecast": [],
-  "budget": [],
   "budgetDefinitions": [
     {
       "id": 1,
@@ -253,9 +252,14 @@
       "endDate": "2025-10-01",
       "periodType": "Month",
       "periodCount": 2,
-      "accounts": [1, 2],
+      "accounts": null,
       "notes": "Test budget version for demo.",
-      "tags": ["demo", "test"]
+      "tags": [
+        "demo",
+        "test",
+        "df",
+        "df"
+      ]
     }
   ],
   "budgetForecasts": [
@@ -267,27 +271,49 @@
       "endDate": "2025-10-01",
       "periodType": "Month",
       "periodCount": 2,
-      "accountIds": [1, 2],
+      "accountIds": [
+        1,
+        2
+      ],
       "data": [
         {
           "period": "2025-08-01",
           "accounts": [
-            { "accountId": 1, "balance": 10000 },
-            { "accountId": 2, "balance": 1234 }
+            {
+              "accountId": 1,
+              "balance": 10000
+            },
+            {
+              "accountId": 2,
+              "balance": 1234
+            }
           ],
-          "transactions": [1]
+          "transactions": [
+            1
+          ]
         },
         {
           "period": "2025-09-01",
           "accounts": [
-            { "accountId": 1, "balance": 10500 },
-            { "accountId": 2, "balance": 1234 }
+            {
+              "accountId": 1,
+              "balance": 10500
+            },
+            {
+              "accountId": 2,
+              "balance": 1234
+            }
           ],
-          "transactions": [6]
+          "transactions": [
+            6
+          ]
         }
       ],
       "notes": "Test forecast results for demo.",
-      "tags": ["demo", "test"]
+      "tags": [
+        "demo",
+        "test"
+      ]
     }
   ]
 }
