budget forecast column updates

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -242,11 +242,10 @@
       "tags": []
     }
   ],
-  "forecast": [],
   "budgetDefinitions": [
     {
       "id": 1,
-      "versionName": "Sample Budget Version 1",
+      "name": "Sample Budget Version 1",
       "mode": "daterange",
       "startDate": "2025-08-01",
       "endDate": "2025-10-01",
@@ -264,56 +263,25 @@
   ],
   "budgetForecasts": [
     {
-      "id": 1,
-      "versionName": "Sample Budget Version 1",
-      "mode": "daterange",
-      "startDate": "2025-08-01",
-      "endDate": "2025-10-01",
-      "periodType": "Month",
-      "periodCount": 2,
-      "accountIds": [
-        1,
-        2
-      ],
-      "data": [
-        {
-          "period": "2025-08-01",
-          "accounts": [
-            {
-              "accountId": 1,
-              "balance": 10000
-            },
-            {
-              "accountId": 2,
-              "balance": 1234
-            }
-          ],
-          "transactions": [
-            1
-          ]
-        },
-        {
-          "period": "2025-09-01",
-          "accounts": [
-            {
-              "accountId": 1,
-              "balance": 10500
-            },
-            {
-              "accountId": 2,
-              "balance": 1234
-            }
-          ],
-          "transactions": [
-            6
-          ]
-        }
-      ],
-      "notes": "Test forecast results for demo.",
-      "tags": [
-        "demo",
-        "test"
-      ]
+      "movement": "Debit",
+      "accountSecondary": 2,
+      "period": "2025-08-01",
+      "accountPrimary": 1,
+      "amount": 1500
+    },
+    {
+      "movement": "Credit",
+      "accountSecondary": 3,
+      "period": "2025-08-15",
+      "accountPrimary": 4,
+      "amount": 250
+    },
+    {
+      "movement": "Debit",
+      "accountSecondary": 1,
+      "period": "2025-01-01",
+      "accountPrimary": 2,
+      "amount": 5000
     }
   ]
 }
