--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -194,7 +194,10 @@
     {
       "id": 8,
       "debit_account": "",
-      "credit_account": "",
+      "credit_account": {
+        "id": 1,
+        "name": "Jeanre Credit Card"
+      },
       "amount": 0,
       "isRecurring": true,
       "recurrence": [],
@@ -215,8 +218,11 @@
     },
     {
       "id": 10,
-      "debit_account": null,
-      "credit_account": null,
+      "debit_account": {
+        "id": 2,
+        "name": "tr"
+      },
+      "credit_account": "",
       "amount": 0,
       "isRecurring": false,
       "recurrence": [],
@@ -291,7 +297,10 @@
         "name": "Quarter"
       },
       "periodCount": 2,
-      "accounts": null,
+      "accounts": {
+        "id": 2,
+        "name": "tr"
+      },
       "notes": "Test budget version for demo.",
       "tags": [
         "demo",
@@ -314,7 +323,10 @@
         "name": "Month"
       },
       "periodCount": 0,
-      "accounts": null,
+      "accounts": {
+        "id": 1,
+        "name": "Jeanre Credit Card"
+      },
       "notes": null,
       "tags": []
     }
