--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -9,77 +9,33 @@
         "name": "Income"
       },
       "currency": {
-        "id": 3,
-        "name": "EUR"
+        "id": 1,
+        "name": "ZAR"
       },
       "balance": 10000,
       "current_balance": 10000,
-      "interest": [
-        {
-          "id": 0,
-          "presetOption": {
-            "id": 1,
-            "name": "Custom"
-          },
-          "nominalRate": 0,
-          "effectiveRate": 0,
-          "nominalRatePeriod": {
-            "id": 4,
-            "name": "Weekly"
-          },
-          "calculationMethod": {
-            "id": 1,
-            "name": "Compound"
-          },
-          "compoundingInterval": {
-            "id": 5,
-            "name": "Daily"
-          }
-        }
-      ],
-      "openDate": "2025-06-30"
+      "interest": null,
+      "openDate": "2025-01-01"
     },
     {
       "id": 2,
-      "name": "tr",
+      "name": "salary",
       "type": {
         "id": 1,
         "name": "Asset"
       },
       "currency": {
-        "id": 5,
-        "name": "JPY"
+        "id": 1,
+        "name": "ZAR"
       },
-      "balance": 1234,
+      "balance": 24600,
       "current_balance": 0,
-      "interest": [
-        {
-          "id": 1,
-          "presetOption": {
-            "id": 1,
-            "name": "Custom"
-          },
-          "nominalRate": 14,
-          "effectiveRate": 0,
-          "nominalRatePeriod": {
-            "id": 1,
-            "name": "Annually"
-          },
-          "calculationMethod": {
-            "id": 2,
-            "name": "Simple"
-          },
-          "compoundingInterval": {
-            "id": 1,
-            "name": "Monthly"
-          }
-        }
-      ],
-      "openDate": "2025-07-22"
+      "interest": null,
+      "openDate": "2025-01-01"
     },
     {
       "id": 3,
-      "name": "re",
+      "name": "expenses",
       "type": {
         "id": 1,
         "name": "Asset"
@@ -88,86 +44,39 @@
         "id": 1,
         "name": "ZAR"
       },
-      "balance": 0,
+      "balance": 5000,
       "current_balance": 0,
-      "interest": [
-        {
-          "id": 1,
-          "presetOption": {
-            "id": 1,
-            "name": "Custom"
-          },
-          "nominalRate": 12,
-          "effectiveRate": 0,
-          "nominalRatePeriod": {
-            "id": 1,
-            "name": "Annually"
-          },
-          "calculationMethod": {
-            "id": 2,
-            "name": "Simple"
-          },
-          "compoundingInterval": {
-            "id": 1,
-            "name": "Monthly"
-          }
-        }
-      ],
-      "openDate": "2025-07-26"
-    },
-    {
-      "id": 4,
-      "name": "khtd",
-      "type": {
-        "id": 1,
-        "name": "Asset"
-      },
-      "currency": {
-        "id": 1,
-        "name": "ZAR"
-      },
-      "balance": 234567,
-      "current_balance": 0,
-      "interest": [
-        {
-          "id": 1,
-          "presetOption": {
-            "id": 1,
-            "name": "Custom"
-          },
-          "nominalRate": 12,
-          "effectiveRate": 0,
-          "nominalRatePeriod": {
-            "id": 1,
-            "name": "Annually"
-          },
-          "calculationMethod": {
-            "id": 2,
-            "name": "Simple"
-          },
-          "compoundingInterval": {
-            "id": 1,
-            "name": "Monthly"
-          }
-        }
-      ],
-      "openDate": "2025-07-23"
+      "interest": null,
+      "openDate": "2025-01-01"
     }
   ],
   "transactions": [
     {
       "id": 1,
       "debit_account": {
+        "id": 2,
+        "name": "salary"
+      },
+      "credit_account": {
         "id": 1,
         "name": "Jeanre Credit Card"
       },
-      "credit_account": {
-        "id": 3,
-        "name": "re"
-      },
-      "amount": 5000,
-      "isRecurring": false,
-      "recurrence": [],
+      "amount": 24600,
+      "isRecurring": true,
+      "recurrence": [
+        {
+          "id": 0,
+          "active": true,
+          "version": 1,
+          "tags": [],
+          "frequency": {
+            "id": 2,
+            "name": "Monthly"
+          },
+          "endDate": "2025-07-28",
+          "dayOfMonth": 1
+        }
+      ],
       "amountChange": [],
       "tags": [
         "tag",
@@ -182,102 +91,25 @@
         "name": "Jeanre Credit Card"
       },
       "credit_account": {
-        "id": 4,
-        "name": "khtd"
-      },
-      "amount": 0,
-      "isRecurring": true,
-      "recurrence": [],
-      "amountChange": [],
-      "tags": []
-    },
-    {
-      "id": 8,
-      "debit_account": "",
-      "credit_account": {
-        "id": 1,
-        "name": "Jeanre Credit Card"
-      },
-      "amount": 0,
-      "isRecurring": true,
-      "recurrence": [],
-      "amountChange": [],
-      "tags": [
-        "tag"
-      ]
-    },
-    {
-      "id": 9,
-      "debit_account": "",
-      "credit_account": "",
-      "amount": 0,
-      "isRecurring": false,
-      "recurrence": [],
-      "amountChange": [],
-      "tags": []
-    },
-    {
-      "id": 10,
-      "debit_account": {
-        "id": 2,
-        "name": "tr"
-      },
-      "credit_account": "",
-      "amount": 0,
-      "isRecurring": false,
-      "recurrence": [],
-      "amountChange": [],
-      "tags": []
-    },
-    {
-      "id": 11,
-      "debit_account": null,
-      "credit_account": null,
-      "amount": "",
-      "isRecurring": "",
-      "recurrence": [],
-      "amountChange": [],
-      "tags": []
-    },
-    {
-      "id": 12,
-      "debit_account": {
-        "id": 1,
-        "name": "Jeanre Credit Card"
-      },
-      "credit_account": {
-        "id": 2,
-        "name": "tr"
-      },
-      "amount": 0,
-      "isRecurring": false,
-      "recurrence": [],
-      "amountChange": [],
-      "tags": []
-    },
-    {
-      "id": 13,
-      "debit_account": {
-        "id": 4,
-        "name": "khtd"
-      },
-      "credit_account": {
         "id": 3,
-        "name": "re"
+        "name": "expenses"
       },
-      "amount": 0,
-      "isRecurring": false,
-      "recurrence": [],
-      "amountChange": [],
-      "tags": []
-    },
-    {
-      "id": 14,
-      "debit_account": null,
-      "credit_account": null,
-      "amount": "",
-      "isRecurring": "",
-      "recurrence": [],
+      "amount": 5000,
+      "isRecurring": true,
+      "recurrence": [
+        {
+          "id": 0,
+          "active": true,
+          "version": 1,
+          "tags": [],
+          "frequency": {
+            "id": 2,
+            "name": "Monthly"
+          },
+          "endDate": "2025-07-28",
+          "dayOfMonth": 1
+        }
+      ],
       "amountChange": [],
       "tags": []
     }
@@ -287,83 +119,362 @@
       "id": 1,
       "name": "Sample Budget Version 1",
       "mode": {
-        "id": 3,
-        "name": "timeless"
+        "id": 2,
+        "name": "periods"
       },
       "startDate": "2025-08-01",
       "endDate": "2025-10-01",
       "periodType": {
-        "id": 4,
-        "name": "Quarter"
+        "id": 3,
+        "name": "Month"
       },
-      "periodCount": 2,
+      "periodCount": 24,
       "accounts": {
         "id": 2,
         "name": "tr"
       },
       "notes": "Test budget version for demo.",
       "tags": [
-        "demo",
-        "test",
-        "df",
-        "df"
+        "demo"
       ]
-    },
-    {
-      "id": 2,
-      "name": "ad",
-      "mode": {
-        "id": 2,
-        "name": "periods"
-      },
-      "startDate": "2025-07-27",
-      "endDate": "2025-07-27",
-      "periodType": {
-        "id": 3,
-        "name": "Month"
-      },
-      "periodCount": 0,
-      "accounts": {
-        "id": 1,
-        "name": "Jeanre Credit Card"
-      },
-      "notes": null,
-      "tags": []
     }
   ],
   "budgetForecasts": [
     {
       "id": 1,
       "movement": {
-        "id": 1,
-        "name": "Debit"
+        "id": 2,
+        "name": "Credit"
       },
-      "accountSecondary": "Empty",
-      "period": "",
-      "accountPrimary": "Empty",
-      "amount": 12
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2025-08-01",
+      "amount": 1248.3966666666668
     },
     {
       "id": 2,
       "movement": {
-        "id": 1,
-        "name": "Debit"
+        "id": 2,
+        "name": "Credit"
       },
-      "accountSecondary": "",
-      "period": "2025-08-15",
-      "accountPrimary": "",
-      "amount": 250
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2025-09-01",
+      "amount": 1262.9612944444445
     },
     {
       "id": 3,
       "movement": {
-        "id": 1,
-        "name": "Debit"
+        "id": 2,
+        "name": "Credit"
       },
-      "accountSecondary": "Empty",
-      "period": "2015",
-      "accountPrimary": "Empty",
-      "amount": 0
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2025-10-01",
+      "amount": 1277.6958428796297
+    },
+    {
+      "id": 4,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2025-11-01",
+      "amount": 1292.602294379892
+    },
+    {
+      "id": 5,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2025-12-01",
+      "amount": 1307.682654480991
+    },
+    {
+      "id": 6,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-01-01",
+      "amount": 1322.9389521166026
+    },
+    {
+      "id": 7,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-02-01",
+      "amount": 1338.3732398912964
+    },
+    {
+      "id": 8,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-03-01",
+      "amount": 1353.987594356695
+    },
+    {
+      "id": 9,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-04-01",
+      "amount": 1369.7841162908564
+    },
+    {
+      "id": 10,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-05-01",
+      "amount": 1385.7649309809165
+    },
+    {
+      "id": 11,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-06-01",
+      "amount": 1401.9321885090271
+    },
+    {
+      "id": 12,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-07-01",
+      "amount": 1418.2880640416324
+    },
+    {
+      "id": 13,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-08-01",
+      "amount": 1434.8347581221183
+    },
+    {
+      "id": 14,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-09-01",
+      "amount": 1451.5744969668765
+    },
+    {
+      "id": 15,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-10-01",
+      "amount": 1468.5095327648235
+    },
+    {
+      "id": 16,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-11-01",
+      "amount": 1485.642143980413
+    },
+    {
+      "id": 17,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2026-12-01",
+      "amount": 1502.9746356601845
+    },
+    {
+      "id": 18,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2027-01-01",
+      "amount": 1520.5093397428868
+    },
+    {
+      "id": 19,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2027-02-01",
+      "amount": 1538.2486153732207
+    },
+    {
+      "id": 20,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2027-03-01",
+      "amount": 1556.1948492192416
+    },
+    {
+      "id": 21,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2027-04-01",
+      "amount": 1574.3504557934662
+    },
+    {
+      "id": 22,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2027-05-01",
+      "amount": 1592.7178777777233
+    },
+    {
+      "id": 23,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2027-06-01",
+      "amount": 1611.2995863517967
+    },
+    {
+      "id": 24,
+      "movement": {
+        "id": 2,
+        "name": "Credit"
+      },
+      "accountPrimary": {
+        "id": 2,
+        "name": "tr"
+      },
+      "accountSecondary": null,
+      "period": "2027-07-01",
+      "amount": 1630.098081525901
     }
   ]
 }
