Convert documentation to legal numbering format with non-breaking spaces
- Updated copilot instructions to v2.1.0 with legal numbering
- Added rule 10.8 for listing applied instruction numbers
- Added rules 11.5 and 11.6 requiring legal numbering and non-breaking spaces
- Converted requirements document to legal numbering with indentation
- Partially converted technical documentation to legal numbering
- Deleted deprecated copilot-standard instructions file

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -14,7 +14,17 @@
       },
       "balance": 10000,
       "current_balance": 10000,
-      "interest": null,
+      "interest": [
+        {
+          "id": 0,
+          "presetOption": "Custom",
+          "nominalRate": 0,
+          "effectiveRate": 0,
+          "nominalRatePeriod": "Annually",
+          "calculationMethod": "Simple",
+          "compoundingInterval": "Monthly"
+        }
+      ],
       "openDate": "2025-01-01"
     },
     {
