Rename budget to financial forecast
- Renamed pages/budget.html → pages/forecast.html
- Renamed js/budget.js → js/forecast.js
- Renamed assets/budget-definition-grid.json → assets/forecast-definition-grid.json
- Renamed assets/budget-forecast-grid.json → assets/forecast-snapshot-grid.json
- Updated navbar: 'Budget Builder' → 'Financial Forecast'
- Updated all variable names: budget → forecast, budgetDefinitions → forecastDefinitions, budgetForecasts → forecastSnapshots
- Updated app-data.json property names
- Updated copilot instructions reference
- Updated all UI text and comments

Alpha requirement 1.1.2 completed

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -180,7 +180,7 @@
       "tags": []
     }
   ],
-  "budgetDefinitions": [
+  "forecastDefinitions": [
     {
       "id": 1,
       "name": "Sample Budget Version 1",
@@ -205,7 +205,7 @@
       ]
     }
   ],
-  "budgetForecasts": [
+  "forecastSnapshots": [
     {
       "id": 1,
       "movement": {
