Simplify EditableGrid keyboard navigation and focus management
Major improvements:
1. Removed cell highlighting - inputs show their own focus state
2. Removed table-level focus - inputs are now the only focusable elements
3. Fixed navigation to use schema column indices instead of filtered indices
4. Navigation now skips hidden columns (preserves them for saving)
5. Navigation now skips non-editable columns
6. Added Enter key support for modal buttons (press Enter to open modal)
7. Made modal buttons focusable with tabIndex

Changes to EditableGrid:
- Removed _highlightCell() method and all calls to it
- Removed table tabindex and table.focus() calls
- Updated _setupKeyboardNavigation() to skip hidden and non-editable columns in click handlers
- Updated _moveLeft() and _moveRight() to find next/previous visible AND editable column
- Updated _focusCell() to handle modal buttons with Enter key support
- Updated _selectCell() to use requestAnimationFrame for proper blur-then-focus timing
- Simplified navigation using schema indices (currentCell.col is schema index)
- Auto-save on navigation, auto-focus on cell selection

Changes to shortcuts.json:
- Removed unused navigation shortcuts (moveUp, moveDown, moveLeft, moveRight, nextCell, prevCell, startEdit, saveRow)
- Kept only essential shortcuts: cancelEdit, deleteRow, addRow
- Navigation now hardcoded in _handleKeydown() for simplicity

Changes to accounts.js and transactions.js:
- Added showActions: false to hide action column (use keyboard shortcuts instead)

Navigation behavior:
- Tab/Shift+Tab: Move right/left (skips hidden and non-editable columns)
- Enter/Shift+Enter: Move down/up
- Arrow keys: Bonus navigation when NOT in input
- Typing alphanumeric: Start editing with that character
- Escape: Cancel edit (revert changes)
- Delete: Remove row
- Cmd+Shift+A: Add new row
- Enter on modal button: Open modal dialog

Focus architecture:
- TABLE element: Keyboard event listener (events bubble up from inputs)
- TD cell

--- a/assets/app-data.json
+++ b/assets/app-data.json
@@ -3,33 +3,23 @@
   "accounts": [
     {
       "id": 1,
-      "name": "Jeanre Credit Card",
+      "name": "Credity Card",
       "type": {
-        "id": 4,
-        "name": "Income"
+        "id": 1,
+        "name": "Asset"
       },
       "currency": {
-        "id": 1,
-        "name": "ZAR"
+        "id": 2,
+        "name": "USD"
       },
-      "balance": 10000,
+      "balance": 545,
       "current_balance": 10000,
-      "interest": [
-        {
-          "id": 0,
-          "presetOption": "Custom",
-          "nominalRate": 0,
-          "effectiveRate": 0,
-          "nominalRatePeriod": "Annually",
-          "calculationMethod": "Simple",
-          "compoundingInterval": "Monthly"
-        }
-      ],
-      "openDate": "2025-01-01"
+      "interest": null,
+      "openDate": "2025-01-21"
     },
     {
       "id": 2,
-      "name": "salary",
+      "name": "sal",
       "type": {
         "id": 1,
         "name": "Asset"
@@ -45,18 +35,28 @@
     },
     {
       "id": 3,
-      "name": "expenses",
+      "name": "have to pay",
       "type": {
-        "id": 1,
-        "name": "Asset"
+        "id": 2,
+        "name": "Liability"
       },
       "currency": {
         "id": 1,
         "name": "ZAR"
       },
-      "balance": 5000,
+      "balance": 400,
       "current_balance": 0,
-      "interest": null,
+      "interest": [
+        {
+          "id": 0,
+          "presetOption": "Custom",
+          "nominalRate": 0,
+          "effectiveRate": 0,
+          "nominalRatePeriod": "Annually",
+          "calculationMethod": "Simple",
+          "compoundingInterval": "Monthly"
+        }
+      ],
       "openDate": "2025-01-01"
     },
     {
@@ -87,28 +87,6 @@
         "name": "ZAR"
       },
       "balance": 20,
-      "current_balance": 0,
-      "interest": null,
-      "openDate": "2025-10-13"
-    },
-    {
-      "id": 6,
-      "name": "my drugs",
-      "type": {
-        "id": null,
-        "name": {
-          "id": 1,
-          "name": "Asset"
-        }
-      },
-      "currency": {
-        "id": null,
-        "name": {
-          "id": 1,
-          "name": "ZAR"
-        }
-      },
-      "balance": 0,
       "current_balance": 0,
       "interest": null,
       "openDate": "2025-10-13"
